--- a/kubernetes/myapp/templates/deployment.yaml
+++ b/kubernetes/myapp/templates/deployment.yaml
@@ -1,55 +1,27 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: myapp
-  labels:
-    helm.sh/chart: myapp-0.2.0
-    app.kubernetes.io/name: myapp
-    app.kubernetes.io/instance: myapp
-    app.kubernetes.io/version: "1.16.0"
-    app.kubernetes.io/managed-by: Helm
-spec:
-  type: NodePort
-  ports:
-    - port: 8080
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    app.kubernetes.io/name: myapp
-    app.kubernetes.io/instance: myapp
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: {{ include "myapp.fullname" . }}
   labels:
-    helm.sh/chart: myapp-0.2.0
-    app.kubernetes.io/name: myapp
-    app.kubernetes.io/instance: myapp
-    app.kubernetes.io/version: "1.16.0"
-    app.kubernetes.io/managed-by: Helm
+    {{- include "myapp.labels" . | nindent 4 }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: myapp
-      app.kubernetes.io/instance: myapp
+      {{- include "myapp.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: myapp
-        app.kubernetes.io/instance: myapp
+        {{- include "myapp.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
         - name: registry-secret
       containers:
-        - name: myapp
-          image: imagename
+        - name: {{ .Chart.Name }}
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           command: ["/bin/sh"]
           args: ["-c","sh /usr/local/tomcat/bin/startup.sh;while true; do echo hello; sleep 10;done"]
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
               containerPort: 8080
@@ -79,3 +51,4 @@ spec:
             limits:
               memory: 0.25Gi 
               cpu: 0.5
+
